[gd_scene load_steps=2 format=3 uid="uid://bse76khxf6ied"]

[ext_resource type="Script" uid="uid://bvobs4ly4ojoe" path="res://scripts/inventory.gd" id="1_8cfir"]

[node name="Inventory" type="MarginContainer"]
clip_contents = true
offset_left = 70.0
offset_top = 16.0
offset_right = 568.0
offset_bottom = 336.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_8cfir")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CategoryContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Left" type="Button" parent="HBoxContainer/MarginContainer/CategoryContainer"]
layout_mode = 2
text = "◀ L"

[node name="Items" type="Panel" parent="HBoxContainer/MarginContainer/CategoryContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/CategoryContainer/Items"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Items"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Weap" type="Panel" parent="HBoxContainer/MarginContainer/CategoryContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/CategoryContainer/Weap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Weapons"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Misc" type="Panel" parent="HBoxContainer/MarginContainer/CategoryContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/CategoryContainer/Misc"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Misc"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key" type="Panel" parent="HBoxContainer/MarginContainer/CategoryContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/CategoryContainer/Key"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Key"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Right" type="Button" parent="HBoxContainer/MarginContainer/CategoryContainer"]
layout_mode = 2
text = "R ▶"

[node name="ItemNameContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Items" type="PanelContainer" parent="HBoxContainer/MarginContainer/ItemNameContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="ItemName" type="Label" parent="HBoxContainer/MarginContainer/ItemNameContainer/Items"]
layout_mode = 2
text = "Item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Items2" type="PanelContainer" parent="HBoxContainer/MarginContainer/ItemNameContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/ItemNameContainer/Items2"]
layout_mode = 2
text = "▼"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ScrollContainer" parent="HBoxContainer/MarginContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="ItemContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/ItemList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharaContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/ItemList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescriptionPanel" type="PanelContainer" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Description" type="Label" parent="HBoxContainer/MarginContainer/DescriptionPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "DESCRIZIONE"

[node name="ButtonPanel" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="use" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Use"

[node name="sort" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Sort"

[node name="esc" type="Button" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
text = "Close"

[node name="space" type="PanelContainer" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3

[node name="Info" type="PanelContainer" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ButtonPanel/Info"]
layout_mode = 2

[node name="Gold" type="HBoxContainer" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Gold"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Gold:"

[node name="Gold" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Gold"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Time" type="HBoxContainer" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Time"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Time:"

[node name="Time" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Time"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[connection signal="pressed" from="HBoxContainer/MarginContainer/CategoryContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/CategoryContainer/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/use" to="." method="_on_use_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/sort" to="." method="_on_sort_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/esc" to="." method="_on_esc_pressed"]
